Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ td {
   height: 150px;
   padding: 20px;
   color: white;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .App-intro {
